[package]
name = "kompresin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
pixo = { version = "0.4.1", default-features = false, features = ["simd"] }
lopdf = "0.39"
getrandom = { version = "0.3", features = ["wasm_js"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
